--- a/.github/workflows/go_ci.yaml
+++ b/.github/workflows/go_ci.yaml
@@ -44,3 +44,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.60.3
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          args: "--out-format=colored-line-number"
