--- a/.github/workflows/go_ci.yaml
+++ b/.github/workflows/go_ci.yaml
@@ -1,48 +1,42 @@
-name: CI
-on: [push, pull_request]
+name: golangci-lint
+
+on:
+  pull_request:
+  push:
+    branches:
+      - "main"
+      - "master"
+
+env:
+  GO_VERSION: stable
+  GOLANGCI_LINT_VERSION: v1.60
 
 jobs:
-  # test:
-  #   name: Test
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       go: [1.23]
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@master
-  #
-  #     - name: Set up Go
-  #       uses: actions/setup-go@v4
-  #       with:
-  #         go-version: ${{ matrix.go }}
-  #
-  #     - name: Run Tests
-  #       run: go test -v -cover -covermode=count -coverprofile=coverage.out ./...
-  #
-  #     - name: Convert Coverage
-  #       uses: jandelgado/gcov2lcov-action@v1.0.9
-  #
-  #     - name: Coveralls
-  #       uses: coverallsapp/github-action@v2.2.3
-  #       with:
-  #         github-token: ${{ secrets.github_token }}
-  #         path-to-lcov: coverage.lcov
-
-  lint:
+  detect-modules:
     runs-on: ubuntu-latest
+    outputs:
+      modules: ${{ steps.set-modules.outputs.modules }}
     steps:
-      - name: Get Sources
-        uses: actions/checkout@master
-
-      - name: Setup
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: ${{ env.GO_VERSION }}
+      - id: set-modules
+        run: echo "modules=$(go list -m -json | jq -s '.' | jq -c '[.[].Dir]')" >> $GITHUB_OUTPUT
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+  golangci-lint:
+    needs: detect-modules
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        modules: ${{ fromJSON(needs.detect-modules.outputs.modules) }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          version: v1.60.3
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          args: "--out-format=colored-line-number"
+          go-version: ${{ env.GO_VERSION }}
+      - name: golangci-lint ${{ matrix.modules }}
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
+          working-directory: ${{ matrix.modules }}
