--- a/.github/workflows/go_ci.yaml
+++ b/.github/workflows/go_ci.yaml
@@ -46,5 +46,5 @@ jobs:
         run: |
           for module in ${{ matrix.modules }}; do
             echo "Running tests for module $module"
-            cd $module && go test ./...
+            cd $module && go test ./... -cover
           done
